--- a/404.md
+++ b/404.md
@@ -2,6 +2,9 @@
 layout: page
 title: "404: Page not found"
 permalink: 404.html
+featured_image: /assets/img/heading-404.webp
 ---
+
+# This is not a place of honor...
 
 Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. [Head back home]({{ site.url }}) to try finding it again.
