--- a/404.md
+++ b/404.md
@@ -3,6 +3,7 @@ layout: page
 title: "This is not a place of honor..."
 permalink: 404.html
 featured_image: /assets/img/heading-404.webp
+sitemap: false
 ---
 
 Sorry, we've misplaced that URL or it's pointing to something that doesn't exist. [Head back home]({{ site.url }}) to try finding it again.
